[package]
name = "hack-store-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
colored = "2.1.0"
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1"] }
serde_json = "1.0.128"
uuid = {  version = "1.10.0", features = ["v7"] }
timestamp = "0.1.1"
